# red-arch-km

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.work  go.work.sum  pyproject.toml  run-stack.sh  set-ci.sh
services/api/: pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema_with_rls.py  002_harden_rls_nullif.py  003_rename_keycloak_sub_to_auth_subject.py  004_add_user_is_active.py  005_add_document_size_bytes.py  006_chat_sessions_user_cascade.py  007_ensure_app_user_role.py  008_custom_entities_catalog.py  009_workflow_engine.py  010_enable_pg_trgm.py  011_intake_forms.py  012_workflow_run_permission.py  013_workflow_outbox_source.py  014_workflow_run_delay.py  015_add_document_permissions.py  016_encrypt_org_openai_key.py  017_add_document_celery_task_id.py  018_workflow_token_engine.py  019_workflow_connections.py  020_workflow_inbound_endpoints.py  021_views.py  022_inbound_signing_secret.py  023_nullable_workflow_entity.py  024_workflow_run_inline_on_change.py  025_filterable_btree_indexes.py  026_reports.py  027_workflows_inline_partial_index.py  028_api_keys.py  029_org_provider_credentials.py  030_agents_domain.py  031_org_agent_notify_workflow.py  032_mcp_oauth.py  033_org_agent_autonomy.py  034_admin_bypass_policies.py  035_grant_km_app_role.py  036_org_home_view.py  037_config_lineage.py  038_release_management.py  039_entity_access_control.py  040_admin_bypass_partitioned.py
services/api/scripts/: seed_e2e.py
services/api/src/api/: __init__.py  config.py  db.py  db_scope.py  dependencies.py  exception_handlers.py  main.py  observability.py
services/api/src/api/auth/: api_key.py  clerk.py  dependencies.py  keycloak.py
services/api/src/api/middleware/: request_logging.py
services/api/src/api/models/: __init__.py  agent.py  agent_run.py  api_key.py  base.py  chat.py  custom_entity.py  document.py  form.py  mcp_server.py  org.py  org_provider_credential.py  promotion.py  report.py  user.py  view.py  work_order.py  workflow.py
services/api/src/api/repositories/: agent.py  agent_inbox.py  agent_run.py  api_key.py  attribute.py  base.py  chat.py  custom_entity.py  dimension.py  document.py  dynamic_entity.py  folder.py  form.py  mcp_server.py  membership.py  org.py  org_provider_credential.py  report.py  tag.py  user.py  view.py  work_order.py  workflow.py
services/api/src/api/routers/: admin.py  agent.py  agent_approvals.py  agent_console.py  agents.py  api_keys.py  attributes.py  auth.py  chat.py  dimensions.py  documents.py  entity_definitions.py  entity_records.py  folders.py  forms.py  health.py  inbound.py  internal.py  mcp_servers.py  memberships.py  migration.py  orgs.py  promotions.py  reports.py  search.py  setup.py  tags.py  users.py  views.py  work_orders.py  workflows.py
services/api/src/api/schemas/: admin.py  agent.py  agent_run.py  aggregate.py  api_key.py  attribute.py  chat.py  (+16 more)
services/api/tests/: conftest.py
services/api/tests/integration/: conftest.py  helpers.py  test_agent_document_tools.py  test_agent_form_tools.py  test_agent_runs_repo.py  test_agent_scheduler.py  test_agent_tools.py  test_agent_workflow_tools.py  test_agents_approvals.py  test_agents_delegation.py  test_agents_mcp_oauth.py  test_agents_repo.py  test_api_keys_repo.py  test_chat_sessions.py  test_chat_update_serialization.py  test_custom_entities.py  test_document_key.py  test_document_listing.py  test_entity_access_control_integration.py  test_folder_move.py  test_folder_perm_inheritance.py  test_form_double_submit.py  test_forms.py  test_mcp_servers_repo.py  test_me_filter_integration.py  test_migration_agents.py  test_migration_roundtrip.py  test_promotion.py  test_repo_org_scoping.py  test_reporting.py  test_rls_bypass.py  test_rls_isolation.py  test_setup_and_admin.py  test_views_render_me.py  test_workflow_call_activity.py  test_workflow_concurrency.py  test_workflow_connections.py  test_workflow_decision.py  test_workflow_dispatch.py  test_workflow_dispatch_hardening.py  (+18 more)
services/api/tests/unit/: test_admin_celery_router.py  test_admin_emails_router.py  test_admin_system_router.py  test_admin_users_router.py  test_agent_chat_router.py  test_agent_session_isolation.py  test_agents_authority.py  test_agents_batch_generate_tool.py  test_agents_claude_code_tool.py  test_agents_llm_keys.py  test_agents_llm_provider.py  test_agents_mcp_oauth.py  test_agents_mcp_registry.py  test_agents_notify.py  test_agents_prompt_caching.py  test_agents_record_tools.py  test_agents_runtime.py  test_agents_web_research_tool.py  test_aggregate_query.py  test_api_key_auth.py  test_api_key_scopes.py  test_api_key_service.py  test_api_keys_router.py  test_api_rate_limit.py  test_attribute_schemas.py  test_chat_router.py  test_chat_schemas.py  test_clerk_auth.py  test_config_receiver.py  test_course_generation.py  test_crypto.py  test_custom_entity_schemas.py  test_document_cancel_logs.py  test_document_content.py  test_document_key.py  test_document_reprocess.py  test_document_update_retag.py  test_document_upload.py  test_dynamic_entity_coercion.py  test_email_render.py  (+58 more)
services/brain_api/: pyproject.toml
services/brain_api/src/brain_api/: __init__.py  auth.py  config.py  main.py  observability.py  stores.py
services/brain_api/tests/: conftest.py
services/brain_api/tests/integration/: conftest.py  test_neo4j_store.py  test_qdrant_store.py
services/brain_api/tests/unit/: test_agent_router.py  test_document_summary_endpoint.py  test_ingest_jobs.py  test_ingest_router_async.py  test_ingest_service.py  test_search_service.py  test_stores_singleton.py  test_summarize_hierarchy.py
services/worker/: pyproject.toml
services/worker/src/worker/: __init__.py  celery_app.py  config.py  storage.py
services/worker/tests/: conftest.py  test_retry_logic.py
services/worker/tests/unit/: test_extract_router.py  test_extract_task.py  test_ingest_common_poll.py  test_job.py  test_pdf_batching.py  test_workflow_tasks.py
(+682 files in other folders)
