[project]
name = "red-arch-km"
version = "2.0.0"
description = "Red Arch Knowledge Management Platform"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]
exclude = [
    # Go modules matched by the globs above but not uv (Python) members.
    "packages/accessmask",
    "packages/shared",
    "services/api-go",
    "services/brain-api-go",
    "services/worker-go",
]

[tool.uv.sources]
access-mask = { workspace = true }
shared-config = { workspace = true }
brain-sdk = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Test suites use a non-unique module layout — multiple top-level `conftest.py`
# and `tests/integration/__init__.py` across packages — that mypy cannot resolve
# without `--explicit-package-bases`, which in turn breaks src-layout product
# module resolution (it would re-discover e.g. `api.models.base` under a second
# path-derived name and report spurious duplicate-class errors). Tests are not
# part of the typed product surface, and the standalone scripts below are not
# imported by product code, so both are excluded from the type gate.
exclude = '(/tests/|/alembic/env\.py$|/scripts/seed_e2e\.py$)'

[tool.pytest.ini_options]
testpaths = ["packages", "services"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring external services",
]
