[project]
name = "red-arch-km"
version = "2.0.0"
description = "Red Arch Knowledge Management Platform"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]
exclude = [
    # Go modules matched by the globs above but not uv (Python) members.
    "packages/accessmask",
    "packages/shared",
    "services/api-go",
    "services/brain-api-go",
    "services/worker-go",
]

[tool.uv.sources]
access-mask = { workspace = true }
shared-config = { workspace = true }
brain-sdk = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Test suites use a non-unique module layout — multiple top-level `conftest.py`
# and `tests/integration/__init__.py` across packages — that mypy cannot resolve
# without `--explicit-package-bases`, which in turn breaks src-layout product
# module resolution (it would re-discover e.g. `api.models.base` under a second
# path-derived name and report spurious duplicate-class errors). Tests are not
# part of the typed product surface, and the standalone scripts below are not
# imported by product code, so both are excluded from the type gate.
exclude = '(/tests/|/alembic/env\.py$|/scripts/seed_e2e\.py$)'

[tool.pytest.ini_options]
testpaths = ["packages", "services"]
asyncio_mode = "auto"
# The API integration suite uses a session-scoped async engine fixture shared by
# per-function session fixtures. pytest-asyncio>=1.x defaults to a fresh event loop
# per function, which puts the engine and the tests on different loops → asyncpg
# "another operation is in progress" / "Future attached to a different loop". These
# loop scopes (mirrored from services/api/pyproject.toml) pin everything to one loop.
# The per-package pyproject value only applies when pytest is invoked inside that
# package; the CI gate runs from the repo root, so the root config must set them too.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
# `importlib` import mode gives every test module a unique, fully-qualified name
# derived from its path relative to the rootdir. The default `prepend` mode
# instead derives the package name by walking up while `__init__.py` files exist,
# which mapped both services/api/tests/integration and services/brain_api/tests/
# integration to the bare package `integration` → a deterministic
# ImportPathMismatchError that aborted the whole collection. importlib mode
# requires that test directories NOT carry `__init__.py` (those truncate the
# derived name back to the colliding bare package), so the empty marker files
# under services/*/tests/** were removed alongside this change.
addopts = "--import-mode=importlib"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring external services",
]
