[project]
name = "api"
version = "2.0.0"
description = "Red Arch Knowledge Manager REST API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "httpx>=0.27",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "croniter>=3.0",
    "alembic>=1.13",
    "boto3>=1.35",
    "python-multipart>=0.0.9",
    "mammoth>=1.8",
    "access-mask",
    "shared-config",
    "opentelemetry-instrumentation-fastapi>=0.48",
    "opentelemetry-instrumentation-sqlalchemy>=0.48",
    "opentelemetry-instrumentation-httpx>=0.48",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "testcontainers[postgres]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Pin the default async-fixture loop scope so the session-scoped engine
# fixture and per-function session fixtures share one event loop. Without
# this, pytest-asyncio>=1.x runs them on different loops and asyncpg raises
# InterfaceError. Both fixture AND test loop scope must be session so the
# session-scoped engine and the tests share one loop (otherwise: RuntimeError
# "Future attached to a different loop"). Test-config only; no product behavior change.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "fakeredis>=2.23",
]
