[project]
name = "brain-api"
version = "2.0.0"
description = "Red Arch Knowledge Brain API - vector search, graph, and RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.30",
    "httpx>=0.27",
    "brain-sdk",
    "shared-config",
    "opentelemetry-instrumentation-fastapi>=0.48",
    "opentelemetry-instrumentation-httpx>=0.48",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[neo4j]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_api"]
