[project]
name = "worker"
version = "2.0.0"
description = "Celery worker for document processing"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pdf2image>=1.16",
    "brain-sdk",
    "shared-config",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
