[project]
name = "worker"
version = "2.0.0"
description = "Celery worker for document processing"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pdf2image>=1.16",
    "mammoth>=1.8",
    "boto3>=1.35",
    "openai>=1.50",
    "brain-sdk",
    "shared-config",
    "opentelemetry-instrumentation-celery>=0.48",
    "opentelemetry-instrumentation-httpx>=0.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
